k8s/mngmt-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mngmt-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mngmt
  template:
    metadata:
      labels:
        app: mngmt
    spec:
      containers:
        - name: mngmt
          image: kaprele/waves-of-the-fallen_backend:latest # <<< Replace this with your built image name
          ports:
            - containerPort: 3000 # Or whatever your app uses
          readinessProbe:
            httpGet:
              path: /api/v1/healthz
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/v1/healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
