k8s/game-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: godot-game-service
spec:
  type: LoadBalancer         # oder NodePort, je nach Umgebung
  selector:
    app: godot-server
  sessionAffinity: ClientIP
  ports:
    - name: rpc-tcp
      protocol: TCP
      port: 9999
      targetPort: 9999
    - name: game-udp
      protocol: UDP
      port: 3000
      targetPort: 3000
