k8s/mngmt-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mngmt-svc
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: mngmt
