k8s/pgadmin-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: pgadmin
