k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: waves-of-the-fallen
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - host: waves-of-the-fallen.duckdns.org # change to localhost for dev
      http:
        paths:
          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: mngmt-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
