k8s/game-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dynamic-game-ingress
  namespace: waves-of-the-fallen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: localhost # vm28.fkc.hft-stuttgart.de # set to localhost for dev!
      http:
